# MindForge

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Changelog  MindForge — Flat Layout Scaffold (mf_core) v0.2.md  README.md  pyproject.toml  requirements-dev.txt
.github/: .gitattributes  CHANGELOG.mak  CODEOWNERS  CODEOWNERS.txt  pull_request_template.mak  pull_request_template.md
.github/workflows/: ci.yml
1С/1C/: ИзучениеВстроенныхОбьектов.epf  Урокй1.epf
MindForge/: .gitignore
docs/adr/: MindForge — Flat Layout Scaffold (mf_core) v0.3.md
installer/: # mindforge_scaffold_from_md.py  MindForge — Flat Layout Scaffold (mf_core) v0.2.md  mindforge_installer.py  Круто.docx
mf_core/: __main__.py
mf_core/agents/assets_audit/: inventory_agent.py
mf_core/agents/info_security/: info_agent.py
mf_core/agents/law/: law_agent.py  ompliance_agent.py
mf_core/api/: app.py
mf_core/common/: config.py  paths.py
mf_core/workers/: MindForge v0.6 (draft с PoC-файлами).md  MindForge v0.7 (draft с PoC-файлами).md  MindForge — Flat Layout Scaffold (mf_core) v0.1.md  MindForge — Flat Layout Scaffold (mf_core) v0.3.md  MindForge — Flat Layout Scaffold (mf_core) v0.4.md  indForge v0.5.md
scripts/: fix_eol.ps1  git_bootstrap.ps1  git_bootstrap.sh  prestart.sh
tests/integration/: ib_test.txt  test_agents_integration.py  test_files.py  test_files_preview.py  test_files_upload.py  test_health.py  test_summary.py
tests/unit/: test_agents_unit.py  test_health_unit.py  test_summary_unit.py
uploads/: test_ib.txt  test_preview.txt
(+10 files in other folders)
